--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<!-- copy righ notice 1.2.3 -->
 	<title></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
