--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	THis was changed in the real-work branch:wq
 
 	<!-- copy righ notice 1.2.3 -->
-	<title></title>
+	<title>Example web site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
