Added copyright notiec in add-copyright branch

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <head>
+<!--
+Copyright notice added in add-copyright branch 8/1/2019
+-->
+
 	THis was changed in the real-work branch:wq
 
 	<!-- copy righ notice 1.2.3 -->
