CHnaged simple.html on realwork branch

--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ Copyright notice added in add-copyright branch 8/1/2019
 	THis was changed in the real-work branch:wq
 
 	<!-- copy righ notice 1.2.3 -->
-	<title>Example web site</title>
+	<title>A great new web site 8.1  Realwork branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,6 +22,7 @@ Copyright notice added in add-copyright branch 8/1/2019
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			8/1/2019 @ 2pm updated content in realwork branch
 		</p>
 	</main>
 	<footer class="container">
