Emg changes in Master

--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ Copyright notice added in add-copyright branch 8/1/2019
 	THis was changed in the real-work branch:wq
 
 	<!-- copy righ notice 1.2.3 -->
-	<title>Example web site</title>
+	<title>Super web site from master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -21,11 +21,11 @@ Copyright notice added in add-copyright branch 8/1/2019
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			New content from master branch
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; SW 2019 master branch</p>
 	</footer>
 </body>
 </html>
