simple.html in Master S8 L63

--- a/simple.html
+++ b/simple.html
@@ -33,3 +33,6 @@ Copyright notice added in add-copyright branch 8/1/2019
 </html>
 
 THIs was changed in the Master Branch
+
+S8 L62 Changed in master 
+
